alignment issues fixed on container in projects component.

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,7 +1,9 @@
 .projects {
   width: 100vw;
-  padding-top: 8%;
+  height: 87vh;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .project-image {
